update deploy script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rebass-custom-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://johnpolacek.github.io/custom-rebass/",
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "grid-styled": "^2.0.0-10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
